fixed hero being out of view on desktop view

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -27,6 +27,7 @@
   background-size: 100rem;
   margin: 1rem;
   @media screen and (min-width: 1058px) {
+    height: 80vh;
   }
   h4 {
     padding: 0 1rem;
